Added a couple pages.

--- a/assets/css/styles.main.less
+++ b/assets/css/styles.main.less
@@ -24,7 +24,14 @@
 @import '../src/less/_colors.less';
 @import '../src/less/_buttons.less';
 @import '../src/less/_subscribe.less';
+@import '../src/less/_signup.less';
+@import '../src/less/_accordion.less';
+@import '../src/less/_faq.less';
 
 // Pages
 
+@import '../src/less/_header.less';
+@import '../src/less/_footer.less';
+@import '../src/less/_content.less';
+@import '../src/less/_page-header.less';
 @import '../src/less/_page-home.less';
