--- a/assets/src/less/_base.less
+++ b/assets/src/less/_base.less
@@ -49,6 +49,10 @@ h6 {
   line-height: inherit;
   margin: 5px 0 10px;
 
+  &:first-child {
+    margin-top: 0;
+  }
+
   small {
 
     font-size: 80%;
@@ -64,27 +68,27 @@ h6 {
 }
 
 h1 {
-  line-height: 1;
+  line-height: 1.2;
 
   @media @mobile {
     .font_size(36);
   }
 
   @media @tablet {
-    .font_size(40);
+    .font_size(60);
   }
 
   @media @desktop {
-    .font_size(50);
+    .font_size(60);
   }
 
   @media @max {
-    .font_size(50);
+    .font_size(60);
   }
 }
 
 h2 {
-  .font_size(30);
+  .font_size(36);
 
   @media @mobile {
     .font_size(30);
@@ -95,11 +99,11 @@ h2 {
   }
 
   @media @desktop {
-    .font_size(30);
+    .font_size(36);
   }
 
   @media @max {
-    .font_size(30);
+    .font_size(36);
   }
 
 }
@@ -139,8 +143,12 @@ h6 { }
 
 a {
   text-decoration: none;
+  color: @textGray;
   &:hover {
     //text-decoration: underline;
+  }
+  &.underline {
+    border-bottom: 1px solid
   }
 }
 
@@ -151,8 +159,7 @@ p {
   line-height: 1.6;
 
   &.emphasized {
-    .font_size(18);
-    color: @textGray;
+    .font_size(20);
     margin: 15px 0;
   }
 
@@ -269,10 +276,11 @@ form label {
 form input[type=text],
 form input[type=email],
 form input[type=password],
+form input[type=tel],
 form textarea {
-  .font_size(14);
+  .font_size(20);
   width: 100%;
-  border-radius: 3px;
+  border-radius: 2px;
   border: 1px solid @lightGray;
   box-shadow: none;
   margin: 0 0 10px;
