--- a/assets/src/less/_buttons.less
+++ b/assets/src/less/_buttons.less
@@ -106,9 +106,10 @@
 
   }
 
-  &.cta {
+  &.cta, &#gform_submit_button_1 {
+
     background: @green;
-    color: @white;
+    color: @white!important;
     font-weight: normal;
     height: 60px;
 
@@ -121,7 +122,7 @@
       border: 2px solid darken(@green, 8%);
     }
     @media @xs {
-      .font_size(14);
+      .font_size(17);
       padding: 0;
     }
     @media @mobile {
@@ -132,6 +133,7 @@
       .font_size(20);
       padding: 0 25px;
     }
+
   }
 
 }
