--- a/assets/src/less/_page-home.less
+++ b/assets/src/less/_page-home.less
@@ -212,6 +212,7 @@
 
     @media @desktop {
       float: none;
+      margin-right: 0;
       margin-bottom: 20px;
     }
 
@@ -263,7 +264,11 @@
     width: 76px;
 
     @media @xs {
-      .center();
+      left: 0%;
+      position: absolute;
+      top: 50%;
+      transform: translate( 0%, -50%);
+      left: 0;
     }
 
     @media @mobile {
@@ -285,6 +290,108 @@
     @media @desktop {
       .center();
     }
+
+  }
+
+}
+
+#home--faq {
+
+  padding: @spaced*1.5 0;
+
+  h2 {
+
+    @media @xs {
+      margin-bottom: 15px;
+    }
+    @media @tablet {
+      margin-bottom: 15px;
+
+    }
+    @media @desktop {
+      margin-bottom: 20px;
+    }
+
+  }
+
+}
+
+
+.faq {
+
+  .faq-item {
+
+    h2 {
+
+      margin: 0;
+
+      @media @xs {
+        .font_size(18);
+      }
+
+      @media @tablet {
+        .font_size(20);
+      }
+
+      @media @desktop {
+        .font_size(22);
+      }
+
+    }
+
+    a {
+
+      color: @green;
+      border-bottom: 1px solid @green;
+
+    }
+
+  }
+
+}
+
+
+#home--banner {
+
+  .slide {
+
+    @media @xs {
+      padding: @spaced*4 0 @spaced;
+    }
+
+    @media @tablet {
+      padding: @spaced*5 0 @spaced*2;
+    }
+
+    @media @desktop {
+      padding: @spaced*7 0 @spaced*4;
+    }
+
+    color: @white;
+    p,h1,h2,h3,h4,h5,h6,a { color: inherit; }
+
+    h1,h2,h3,h4,h5,h6 {
+      font-family: @font-fam-subtitle;
+    }
+
+    .emphasized {
+      @media @xs {
+        .font_size(17);
+        line-height: 1.3;
+      }
+
+      @media @tablet {
+        .font_size(24);
+        display: block;
+      }
+
+      @media @desktop {
+         .font_size(24);
+      }
+    }
+
+    background-size: cover;
+    background-position: top center;
 
   }
 
