--- a/assets/css/styles.main.less
+++ b/assets/css/styles.main.less
@@ -28,6 +28,7 @@
 @import '../src/less/_accordion.less';
 @import '../src/less/_faq.less';
 
+
 // Pages
 
 @import '../src/less/_header.less';
@@ -35,3 +36,4 @@
 @import '../src/less/_content.less';
 @import '../src/less/_page-header.less';
 @import '../src/less/_page-home.less';
+@import '../src/less/_scaffold.less';
