--- a/assets/src/less/_accordion.less
+++ b/assets/src/less/_accordion.less
@@ -11,20 +11,19 @@
   width:100%
 }
 
-.accordion li {
+.accordion ul > li {
   cursor:pointer;
   list-style-type:none;
   padding:0;
   margin:0;
   display:block;
   width:100%;
-  border-bottom: 2px solid @bgGray;
   &:last-child {
     border-color: transparent;
   }
 }
 
-.accordion li div {
+.accordion ul > li div {
   display:block;
   clear:both;
   padding-bottom: 25px;
@@ -33,9 +32,6 @@
   p {
     &:first-child {
       margin-top: 0;
-    }
-    &:last-child {
-      margin-bottom: 0;
     }
   }
 }
