--- a/assets/src/less/_header.less
+++ b/assets/src/less/_header.less
@@ -32,6 +32,10 @@
       background-repeat: no-repeat;
       text-indent: -99999px;
 
+      &.simple {
+        background-image: url(/assets/img/green-recs-logo-light.png);
+      }
+
     }
 
   }
@@ -46,4 +50,5 @@
   }
 
 }
+
 
