--- a/assets/src/less/_page-header.less
+++ b/assets/src/less/_page-header.less
@@ -1,7 +1,7 @@
 .page-header {
 
   padding-top: @spaced*5;
-  background: @green;
+  //background: @green;
 
   .title {
 
@@ -13,7 +13,7 @@
   }
 
   .featured-wrap {
-    background: @green;
+    //background: @green;
     position: relative;
     transform: translate(0, -50%);
   }
@@ -30,7 +30,7 @@
   &.simple {
 
     border-top: 1px solid @lightGray;
-    padding-top: @spaced*2;
+    //padding-top: @spaced*2;
 
     .title {
 
@@ -38,6 +38,18 @@
 
     }
 
+    .rule {
+      background: @lighterGray;
+      margin: 0;
+    }
+
   }
+
+}
+
+#header-wrap {
+
+  background-position: center top;
+  background-size: cover;
 
 }
