--- a/assets/css/styles.main.less
+++ b/assets/css/styles.main.less
@@ -36,4 +36,5 @@
 @import '../src/less/_content.less';
 @import '../src/less/_page-header.less';
 @import '../src/less/_page-home.less';
+@import '../src/less/_page-doctors.less';
 @import '../src/less/_scaffold.less';
