doctor sign up page

--- a/src/less/site/_page-header.less
+++ b/src/less/site/_page-header.less
@@ -12,6 +12,16 @@
 
   }
 
+  &-green {
+    
+    background-color: @green;
+
+    .title {
+      content: @white;
+    }
+
+  }
+
   .featured-wrap {
     //background: @green;
     position: relative;
