finished doctors signup

--- a/src/less/site/_base.less
+++ b/src/less/site/_base.less
@@ -342,6 +342,17 @@ form textarea {
   }
 }
 
+.text-left {
+  text-align: left;
+
+  @media @xs {
+    text-align: left;
+  }
+  @media @desktop {
+    text-align: left
+  }
+}
+
 .divider {
 
   background: @lighterGray;
