--- a/src/less/theme.less
+++ b/src/less/theme.less
@@ -21,3 +21,5 @@
 @import 'site/_page-doctors.less';
 @import 'site/_scaffold.less';
 @import 'site/_signup-page.less';
+
+@import 'doctors/_joinform.less';
