--- a/src/less/doctors/_joinform.less
+++ b/src/less/doctors/_joinform.less
@@ -2,9 +2,54 @@
 
 	&--form {
 
+		margin-bottom: @spaced*2;
+
 		.form {
 
-			background: @bgGray;
+			border:1px solid @lighterGray;
+			padding: @spaced;
+
+			.fs-cell {
+				margin-bottom: @spaced;
+			}
+
+			&--reach {
+				input {
+
+					display: inline-block;
+					width: 70px;
+
+				}
+				.ginput_container {
+					display: inline-block;
+					margin-right: 15px;
+					label {
+						display: inline-block;
+						margin-left: 5px;
+					}
+				}
+			}
+
+			.gform_footer {
+				text-align: center;
+				padding-top: 15px;
+				.button {
+					margin-bottom: 0;
+					padding: 0 20px;
+					height: 40px;
+					line-height: 40px;
+				}
+			}
+
+			ul {
+				padding: 0;
+				margin: 0;
+				&:after {
+					content: '';
+					display: block;
+					clear: both;
+				}
+			}
 
 		}
 
