--- a/src/less/site/_page-header.less
+++ b/src/less/site/_page-header.less
@@ -35,7 +35,7 @@
     }
 
     @media @max {
-      margin-top: -80px;
+     transform: translate(0, -50%);
     }
     //transform: translate(0, -50%);
   }
