--- a/src/less/site/_header.less
+++ b/src/less/site/_header.less
@@ -60,7 +60,7 @@
     display: inline-block;
     height: @btnheight;
     line-height: @btnheight;
-    color: @darkgreen;
+    color: @white;
     margin: 0 -2px;
     font-weight: normal;
     padding: 0 10px;
@@ -68,6 +68,12 @@
       padding-right: 0;
     }
 
+  }
+
+  &.simple {
+    a {
+      color: @darkgreen;
+    }
   }
 
 }
