cleaned up templates

--- a/src/less/site/_buttons.less
+++ b/src/less/site/_buttons.less
@@ -113,10 +113,11 @@
     font-weight: normal;
     height: 60px;
 
-    line-height: 55px;
+    line-height: 60px;
     text-transform: uppercase;
     letter-spacing: 1px;
     border: 2px solid darken(@green, 5%);
+    padding: 0 20px!important;
 
     &:before {
       position: relative;
