--- a/src/less/site/_header.less
+++ b/src/less/site/_header.less
@@ -28,7 +28,7 @@
     position:fixed;
     top:0;
     left:0;
-    background:@green;
+    background:@white75;
     padding-top: 0;
     -webkit-transform:translateY(-100%);
     -ms-transform:translateY(-100%);
@@ -43,7 +43,7 @@
 
     #logo-wrap {
       a.simple {
-        background-image: url(/assets/img/greenrecs-logo-dark.png);
+        //background-image: url(/assets/img/greenrecs-logo-dark.png);
       }
     }
   }
