--- a/src/less/site/_header.less
+++ b/src/less/site/_header.less
@@ -5,6 +5,14 @@
   padding: @spaced 0 0;
   z-index: 9;
 
+  #primary-nav {
+    &.text-right {
+      @media @min {
+        text-align: right;
+      }
+    }
+  }
+
   #logo-wrap {
 
     a {
