fixed some theme junk

--- a/src/less/site/_joinform.less
+++ b/src/less/site/_joinform.less
@@ -1,8 +1,11 @@
 .booking-form {
 
-	.title {
-		margin-bottom: 0;
+	&-content {
+		padding: @spaced*1.5;
+		border: 1px solid @bgGray;
+		box-shadow: 0 0 15px @bgGray;
 	}
+
 
 	.text-center {
 		@media @min {
