--- a/src/less/site/_page-header.less
+++ b/src/less/site/_page-header.less
@@ -35,7 +35,7 @@
     }
 
     @media @max {
-     transform: translate(0, -50%);
+     tmargin-top: -60px;
     }
     //transform: translate(0, -50%);
   }
