--- a/src/less/site/_joinform.less
+++ b/src/less/site/_joinform.less
@@ -6,6 +6,23 @@
 		box-shadow: 0 0 15px @bgGray;
 	}
 
+	select {
+		-webkit-appearance: none;
+      -moz-appearance:    none;
+   	appearance:         none;
+   	width: 100%;
+   	background: none;
+   	padding-top: 0!important;
+   	padding-bottom: 0!important;
+   	.font_size(13)!important;
+   	box-shadow: none!important;
+   	line-height: 40px!important;
+   	height: 40px!important;
+   	background-image: url('/assets/img/downicon.svg');
+   	background-position:  right 5px center;
+   	background-repeat: no-repeat;
+   	background-size: 20px 20px;
+	}
 
 	.text-center {
 		@media @min {
