--- a/src/less/site/_signup-page.less
+++ b/src/less/site/_signup-page.less
@@ -7,6 +7,14 @@
 
   }
 
+.checkbox {
+
+  .fs-checkbox, label {
+    display: inline-block;
+  }
+
+}
+
   &--content {
 
     padding-top: @spaced*3;
@@ -19,6 +27,7 @@
       font-weight: 300;
       color: @error;
     }
+
 
     .btn-group {
 
