--- a/src/less/site/_base.less
+++ b/src/less/site/_base.less
@@ -277,6 +277,7 @@ form input[type=text],
 form input[type=email],
 form input[type=password],
 form input[type=tel],
+form select.selectpicker,
 form textarea, {
   .font_size(20);
   width: 100%;
